// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topic test on android:  renders a group of Topics in the correct order 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 1,
          "borderWidth": 1,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 12,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
          }
        }
      >
        Football
      </Text>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 1,
          "borderWidth": 1,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 12,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
          }
        }
      >
        Chelsea FC
      </Text>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 1,
          "borderWidth": 1,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 12,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
          }
        }
      >
        Arsenal
      </Text>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 1,
          "borderWidth": 1,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 12,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
          }
        }
      >
        Manchester United FC
      </Text>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 1,
          "borderWidth": 1,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 12,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
          }
        }
      >
        Rugby Union
      </Text>
    </View>
  </View>
</View>
`;

exports[`Topic test on android:  renders a single Topic 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  testID={undefined}
>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRadius": 1,
        "borderWidth": 1,
        "marginRight": 10,
        "marginTop": 10,
        "paddingBottom": 12,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 12,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
        }
      }
    >
      Football
    </Text>
  </View>
</View>
`;
